styles.css
/* ... */
.service-item h2 {
  color: var(--primary-theme-color);
  font-size: 2rem;
  text-transform: uppercase;
  margin-bottom: 15px;
  font-weight: 700;
}

.service-item p {
  color: white;
  text-align: left;
}
.service-item .icon {
  height: 50px;
  width: 50px;
  margin-bottom: 20px;
}

/* ? Project Section Styling */
.projects {
}

.projects {
  height: 100vh;
  flex-direction: column;
  text-align: center;
  max-width: 1500px;
  margin: 0 auto;
  justify-content: space-around;
  text-align: center;
  overflow: scroll;
  padding-top: 50px;
  /* overflow-y: hidden; */
  /* margin-bottom: 70px; */
}

.projects-header {
  margin: 50px 0;
}

.all-projects {
  width: 90%;
  margin: 0 auto;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  gap: 40px;
}

.project-item {
  height: 30%;
  display: flex;
  flex-direction: column;
  align-items: center;
  width: 100%;
  overflow: hidden;
  border-radius: 10px;
  /* gap: 10px; */
}

.project-info {
  padding: 20px;
  flex-basis: 50%;
  display: flex;
  flex-direction: column;
  align-items: flex-start;
  text-align: left;
  background-image: linear-gradient(60deg, #29323c 0%, #485563 100%);
}

.project-title {
  color: var(--primary-theme-color);
  margin-bottom: 10px;
  font-size: 2rem;
}

.project-languages {
  color: white;
  margin-bottom: 10px;
  font-size: 1.2rem;
}

.project-description {
  color: white;
  font-weight: 300;
}

.project-image {
  flex-basis: 50%;
  height: 300px;
  overflow: hidden;
}

.project-image img {
  transition: transform 0.3s ease;
  width: 100%;
}
.project-image:hover img {
  transform: scale(1.1);
}

/* ? About Section Styling */
#about {
  padding-top: 50px;
}

.about {
  height: 100vh;
  display: flex;
  flex-direction: column-reverse;
  justify-content: space-around;
  align-items: center;
  max-width: 1200px;
  text-align: center;
  margin: 0 auto;
}
.col-left {
  width: 80%;
  height: 40%;
}

.col-right {
  width: 90%;
  height: 40%;
}

.col-right p {
  font-size: 12px;
  line-height: 2rem;
}

.col-right h2 {
  letter-spacing: 0.5rem;
  margin-bottom: 10px;
}

.about-img {
  height: 100%;
  object-fit: cover;
  position: relative;
  z-index: 1;
}

.about-img::after {
  content: '';
  position: absolute;
  left: -30px;
  top: 20px;
  height: 98%;
  width: 98%;
  border: 5px solid var(--primary-theme-color);
  z-index: -1;
}
.about-img img {
  width: 100%;
  border: 7px solid white;
}

/* ? Contact Me Section Styling */
#contact {
  height: 100vh;
  display: flex;
  flex-direction: column;
  justify-content: space-around;
  align-items: center;
  padding-top: 65px;
}
form {
  flex-basis: 80%;
  display: flex;
  flex-direction: column;
  justify-content: space-around;
  align-items: center;
}

form input {
  width: 90%;
  height: 4rem;
  padding: 1rem;
}
textarea {
  height: 35%;
  width: 90%;
  padding: 1rem;
  font-family: 'Montserrat', sans-serif;
}

.subscribe {
  width: 90%;
  margin: 10px;
}
.subscribe-yes {
  width: 40%;
  display: flex;
  gap: 10px;
  align-items: center;
  justify-content: center;
}

#yes {
  width: 16px;
}
.subscribe-no {
  width: 40%;
  display: flex;
  gap: 10px;
  align-items: center;
  justify-content: center;
}

#no {
  width: 16px;
}

.subscribe-inputs {
  width: 60%;
  display: flex;
  justify-content: space-around;
  align-items: center;
}

/* ? Start Contact Information Styling */
#contact-information {
  height: 100vh;
  display: flex;
  flex-direction: column;
  justify-content: space-around;
  align-items: center;
  padding-top: 80px;
}

.contact-items {
  height: 80%;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: space-around;
}

.contact-item {
  display: flex;
  width: 50%;
  height: 30%;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  -webkit-box-shadow: 3px 1px 14px 2px rgba(166, 166, 166, 0.78);
  box-shadow: 3px 1px 14px 2px rgba(166, 166, 166, 0.78);
  border-radius: 10px;
  transition: transform 0.3s ease;
  cursor: pointer;
}

.contact-item:hover {
  transform: scale(1.1);
}

.contact-icon {
  width: 15%;
  margin-bottom: 10px;
}

.contact-icon img {
  width: 100%;
}

.contact-info {
  display: flex;
  flex-direction: column;
  align-items: center;
  line-height: 1.5;
}

.contact-info h3 {
  font-weight: 300;
}

/* ? Start Footer Styling */
footer {
  margin-top: 20px;
  height: 20%;
  width: 100%;
  /* margin-bottom: 25px; */
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: space-around;
  background-image: linear-gradient(60deg, #29323c 0%, #485563 100%);
  padding: 16px;
  /* border: 2px solid var(--primary-theme-color);
  border-radius: 15px; */
}

footer .section-title {
  color: white;
  font-size: 28px;
}

footer p {
  color: white;
  font-weight: 300;
  font-size: 10px;
  line-height: 1rem;
}
.social-links {
  width: 70%;
  margin: 0 auto;
  height: 60%;
  display: flex;
  align-items: center;
}

.social-links a {
  text-align: center;
}

.social-links img {
  width: 30%;
}
/* ? Keyframe Animations */
/* .animate {
  animation: show-text 1s ease;
  animation: reveal-text 0.5s ease forwards;
  animation: reveal-name 0.5s ease forwards;
} */

@keyframes hamburger_pulse {
  0% {
    opacity: 0;
    transform: scale(1);
  }
  100% {
    opacity: 1;
    transform: scale(1.5);
  }
}
@keyframes show-text {
  50% {
    width: 100%;
    left: 0;
  }
  100% {
    width: 0;
    left: 100%;
  }
}

@keyframes reveal-text {
  100% {
    color: white;
  }
}

@keyframes reveal-name {
  100% {
    color: var(--primary-theme-color);
    font-weight: 700;
  }
}
/* ... */

